--- a/Mobile/habit_app/web/index.html
+++ b/Mobile/habit_app/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="habit_app">
+  <meta name="apple-mobile-web-app-title" content="habitmobile">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>habit_app</title>
+  <title>habitmobile</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
